<resources>
    <string name="app_name">Weak3</string>
    <string name="thong_tin_ca_nhan">Thông tin cá nhân</string>
    <string name="ho_ten">Họ tên:</string>
    <string name="cmnd">CMND:</string>
    <string name="so_thich">Sở thích</string>
    <string name="gioi_tinh">Giới tính</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="khong_xac_dinh">Không xác định</string>
    <string name="an_ngon">Ăn ngon</string>
    <string name="mac_dep">Mặc đẹp</string>
    <string name="choi_game">Chơi game</string>
    <string name="thong_tin_khac">Thông tin khác</string>
    <string name="luu_thong_tin">LƯU THÔNG TIN</string>
    <string name="nhap_ho_ten">Nhập họ tên</string>
    <string name="nhap_cmnd">Nhập CMND</string>
</resources>